--- a/.github/workflows/win-ca-smoke-self-test.yml
+++ b/.github/workflows/win-ca-smoke-self-test.yml
@@ -18,5 +18,5 @@ jobs:
       post-step-name: Verify HTTPS succeeds after trust
       pre-test-command: pwsh -File scripts/Test-WinCA.ps1
       post-test-command: pwsh -File scripts/Test-WinCA.ps1
-    env:
-      WIN_CA_HOST: https://127.0.0.1:4443/
+      pre-step-extra-env: '{"WIN_CA_EXPECT_SUCCESS":"0","WIN_CA_HOST":"https://127.0.0.1:4443/"}'
+      post-step-extra-env: '{"WIN_CA_EXPECT_SUCCESS":"1","WIN_CA_HOST":"https://127.0.0.1:4443/"}'
